self.ExtendableEvent / Client / Clients / WindowClient do not exist in a Service Worker https://bugs.webkit.org/show_bug.cgi?id=178976

Reviewed by Sam Weinig.

Source/WebCore:

Test: http/tests/workers/service/ServiceWorkerGlobalScope-properties.html

* workers/service/ExtendableEvent.idl:
* workers/service/FetchEvent.idl:
Drop [Exposed=Worker] as there is already [Exposed=ServiceWorker] and
ServiceWorkerGlobalScope inherits from WorkerGlobalScope. This is redundant
and we would hit assertions and adding the global constructors at runtime
when the feature is enabled, because the property already exists.

Source/WebKit:

Actually enable the Service Worker RuntimeEnabledFeature in the Service Worker
WebProcess.

* WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::WebSWContextManagerConnection::updatePreferences):

LayoutTests:

Add layout test coverage.

* http/tests/workers/service/ServiceWorkerGlobalScope-properties-expected.txt: Added.
* http/tests/workers/service/ServiceWorkerGlobalScope-properties.html: Added.
* http/tests/workers/service/resources/ServiceWorkerGlobalScope-properties-worker.js: Added.


Canonical link: https://commits.webkit.org/195122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224153 268f45cc-cd09-0410-ab3c-d52691b4dbfc