LayoutTests/http/tests/workers/service/resources/ServiceWorkerGlobalScope-properties-worker.js
@@ -1,0 +1,4 @@
+self.addEventListener("message", (event) => {
+    let result = eval(event.data);
+    event.source.postMessage(event.data + " returned " + JSON.stringify(result));
+});
